fix z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -205,28 +205,32 @@
   background-color: #1f1f1f;
   overflow: hidden;
   position: relative;
-  z-index: -2;
 }
 
 .section-title_theme_dark {
   color: white;
   margin: 90px auto 0;
+  position: relative;
+  z-index: 2;
 }
 
 .section-subtitle_theme_dark {
   color: white;
   margin: 20px auto 0;
+  position: relative;
+  z-index: 2;
 }
 
 .table_theme_dark {
   margin: 0 auto 90px;
+  position: relative;
+  z-index: 2;
 }
 
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin: 80px 0 0;
-  z-index: 2;
 }
 
 .kaufman__triangle {
@@ -238,7 +242,7 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: -1;
+  z-index: 1;
 }
 
 .footer {
